// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedData bylineLinkedData should change author contents and locationCreated when byline is present 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "Person",
        "image": "https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg",
        "name": "John",
        "sameAs": [
          "https://www.bbc.co.uk/news/topics/cg2gmrxlde0t",
          "https://twitter.com/BBCNews",
        ],
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "locationCreated": {
        "@place": "London",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render linked data for Ondemand Radio page 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Ondemand Radio Headline",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
    {
      "@type": "AudioObject",
      "description": "د بي بي سي ورلډ سروس څخه پروګرام کول",
      "duration": "PT29M30S",
      "embedURL": "https://test.bbc.com/ws/av-embeds/media/korean/externalId/id/ko",
      "name": "ماښامنۍ خپرونه",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg",
      "uploadDate": "2020-04-23T15:30:00.000Z",
    },
  ],
}
`;

exports[`LinkedData should correctly render linked data for Photo Gallery page 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News",
        "noBylinesPolicy": "https://www.bbc.com/news/help-41670342#authorexpertise",
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "description": "Some photos in a gallery",
      "headline": "PGL Headline for Magnificent Gallery",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "PGL Headline for SEO",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render linked data for article pages for service with no trust project markup 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "Organization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/include/articles/public/scotland/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC",
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/include/articles/public/scotland/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "Organization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/include/articles/public/scotland/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/include/articles/public/scotland/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render linked data for articles 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News",
        "noBylinesPolicy": "https://www.bbc.com/news/help-41670342#authorexpertise",
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render linked data for articles with byline 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News",
        "noBylinesPolicy": "https://www.bbc.com/news/help-41670342#authorexpertise",
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render linked data for home pages 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Home - BBC News",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render linked data for radio pages 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "RadioChannel",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "BBC News Radio",
      },
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render publisherLogo for news 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News",
        "noBylinesPolicy": "https://www.bbc.com/news/help-41670342#authorexpertise",
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render publisherLogo for non-news services 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "noBylinesPolicy": "https://www.bbc.com/mundo/institucional-51359666#authorexpertise",
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "es",
        "name": "Spanish",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "publishingPrinciples": "https://www.bbc.com/mundo/institucional-51359666",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData should correctly render publisherLogo for sport 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "Organization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sport/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC",
      },
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sport/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "Organization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sport/images/metadata/publisher-nx16.png",
          "width": 108,
        },
        "name": "BBC",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/sport/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;

exports[`LinkedData showAuthor should exclude author from article when false 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "dateModified": "2018-01-01T13:00:00.000Z",
      "datePublished": "2018-01-01T12:01:00.000Z",
      "headline": "Article Headline for SEO",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "en-GB",
        "name": "English",
      },
      "mainEntityOfPage": {
        "@id": "https://www.test.bbc.com/pathname",
        "@type": "WebPage",
        "name": "Royal wedding 2018: Bouquet laid on tomb of unknown warrior",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 16,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/publisher-nx16.png",
          "width": 103,
        },
        "name": "BBC News",
        "publishingPrinciples": "https://www.bbc.com/news/help-41670342",
      },
      "thumbnailUrl": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png",
      "url": "https://www.test.bbc.com/pathname",
    },
  ],
}
`;
